--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+	<color name="colorPrimary">#1DE278</color>
+	<color name="colorSecondary">#FFFFFF</color>
+	<color name="colorPrimaryDark">#000000</color>
+	<color name="colorBackground">#534C5F</color>
+	<color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorSecondary</color>
 </resources>
