--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,27 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
+	<style name="Base.Applover" parent="Theme.MaterialComponents.Light.NoActionBar">
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorSecondary">@color/colorSecondary</item>
+		<item name="colorControlHighlight">@color/colorPrimary</item>
+		<item name="android:windowContentTransitions">true</item>
+	</style>
+
+	<style name="Widget.Applover.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+		<item name="boxStrokeColor">@color/colorPrimary</item>
+		<item name="boxStrokeWidth">@dimen/boxStrokeWidth</item>
+		<item name="hintTextColor">@color/colorPrimary</item>
+		<item name="android:textColorHint">@color/colorSecondary</item>
+	</style>
+
+	<style name="Theme.Applover.TextInputEditText" parent="Base.Applover">
+		<item name="android:textColor">@color/colorSecondary</item>
+	</style>
+
+	<style name="Theme.Applover.Button" parent="Widget.MaterialComponents.Button">
+		<item name="cornerRadius">@dimen/cornerRadius</item>
+		<item name="android:textAllCaps">false</item>
+	</style>
 
 </resources>
