--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,13 +5,13 @@
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorSecondary">@color/colorSecondary</item>
 		<item name="colorControlHighlight">@color/colorPrimary</item>
-		<item name="android:windowContentTransitions">true</item>
 	</style>
 
 	<style name="Widget.Applover.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-		<item name="boxStrokeColor">@color/colorPrimary</item>
+		<item name="boxStrokeColor">@color/colorSecondary</item>
 		<item name="boxStrokeWidth">@dimen/boxStrokeWidth</item>
-		<item name="hintTextColor">@color/colorPrimary</item>
+		<item name="hintTextColor">@color/colorSecondary</item>
+		<item name="errorTextColor">@color/colorPrimary</item>
 		<item name="android:textColorHint">@color/colorSecondary</item>
 	</style>
 
@@ -24,4 +24,8 @@
 		<item name="android:textAllCaps">false</item>
 	</style>
 
+	<style name="Theme.Applover.AlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+		<item name="android:background">@color/colorBackground</item>
+		<item name="android:textColor">@color/colorSecondary</item>
+	</style>
 </resources>
